cosmos/steamaudio-sys/src/bindings.rs

extern "C" {
    #[doc = " Allocates an audio buffer.\n\nAll audio buffers are uncompressed PCM with 32-bit floating-point samples.\n\nInternally, all audio buffers are stored deinterleaved for performance reasons. If your audio engine provides\ninterleaved audio buffers, you must use \\c iplAudioBufferInterleave and \\c iplAudioBufferDeinterleave to explicitly\nconvert to/from deinterleaved format. If your audio engine provides deinterleaved audio buffers, you can\npass them directly using \\c IPLAudioBuffer, thus avoiding the processing and memory overhead of an extra audio buffer.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  numChannels     Number of channels.\n\\param  numSamples      Number of samples per channel.\n\\param  audioBuffer     The audio buffer to allocate.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplAudioBufferAllocate(
        context: IPLContext,
        numChannels: IPLint32,
        numSamples: IPLint32,
        audioBuffer: *mut IPLAudioBuffer,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Frees an audio buffer.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioBuffer     The audio buffer to free."]
    pub fn iplAudioBufferFree(context: IPLContext, audioBuffer: *mut IPLAudioBuffer);
}
extern "C" {
    #[doc = " Reads samples from an audio buffer and interleaves them into a user-provided array.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  src             The audio buffer to read from.\n\\param  dst             The interleaved array to write into."]
    pub fn iplAudioBufferInterleave(
        context: IPLContext,
        src: *mut IPLAudioBuffer,
        dst: *mut IPLfloat32,
    );
}
extern "C" {
    #[doc = " Writes interleaved samples from a user-provided array into an audio buffer.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  src             The interleaved array to read from.\n\\param  dst             The audio buffer to write into."]
    pub fn iplAudioBufferDeinterleave(
        context: IPLContext,
        src: *mut IPLfloat32,
        dst: *mut IPLAudioBuffer,
    );
}
extern "C" {
    #[doc = " Mixes one audio buffer into another.\n\nBoth audio buffers must have the same number of channels and samples.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  in          The source audio buffer.\n\\param  mix         The destination audio buffer, into which the source should be mixed."]
    pub fn iplAudioBufferMix(
        context: IPLContext,
        in_: *mut IPLAudioBuffer,
        mix: *mut IPLAudioBuffer,
    );
}
extern "C" {
    #[doc = " Downmixes a multi-channel audio buffer into a mono audio buffer.\n\nBoth audio buffers must have the same number of samples.\n\nDownmixing is performed by summing up the source channels and dividing the result by the\nnumber of source channels. If this is not the desired downmixing behavior, we recommend\nthat downmixing be performed manually.\n\n\\param  context The context used to initialize Steam Audio.\n\\param  in      The source audio buffer.\n\\param  out     The destination audio buffer."]
    pub fn iplAudioBufferDownmix(
        context: IPLContext,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    );
}
extern "C" {
    #[doc = " Converts an Ambisonic audio buffer from one Ambisonic format to another.\n\nBoth audio buffers must have the same number of samples.\n\nThis conversion can be applied in-place, i.e., \\c in and \\c out can be the same\naudio buffer.\n\nSteam Audio's \"native\" Ambisonic format is N3D, so for best performance, keep all\nAmbisonic data in N3D format except when exchanging data with your audio engine.\n\n\\param  context     The context used to initialize Steam Audio.\n\\param  inType      Ambisonic format of \\c in.\n\\param  outType     Ambisonic format that \\c out should be in.\n\\param  in          The source audio buffer.\n\\param  out         The destination audio buffer."]
    pub fn iplAudioBufferConvertAmbisonics(
        context: IPLContext,
        inType: IPLAmbisonicsType,
        outType: IPLAmbisonicsType,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLHRTF_t {
    _unused: [u8; 0],
}
#[doc = " A Head-Related Transfer Function (HRTF). HRTFs describe how sound from different directions is perceived by a\neach of a listener's ears, and are a crucial component of spatial audio. Steam Audio includes a built-in HRTF,\nwhile also allowing developers and users to import their own custom HRTFs."]
pub type IPLHRTF = *mut _IPLHRTF_t;
#[doc = " The built-in HRTF."]
pub const IPLHRTFType_IPL_HRTFTYPE_DEFAULT: IPLHRTFType = 0;
#[doc = " An HRTF loaded from a SOFA file."]
pub const IPLHRTFType_IPL_HRTFTYPE_SOFA: IPLHRTFType = 1;
#[doc = " The type of HRTF to use."]
pub type IPLHRTFType = ::std::os::raw::c_int;
#[doc = " No normalization."]
pub const IPLHRTFNormType_IPL_HRTFNORMTYPE_NONE: IPLHRTFNormType = 0;
#[doc = " Root-mean squared normalization. Normalize HRTF volume to ensure similar volume from all directions\nbased on root-mean-square value of each HRTF."]
pub const IPLHRTFNormType_IPL_HRTFNORMTYPE_RMS: IPLHRTFNormType = 1;
#[doc = " Volume normalization types to use."]
pub type IPLHRTFNormType = ::std::os::raw::c_int;
#[doc = " Settings used to create an HRTF object."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLHRTFSettings {
    #[doc = " The type of HRTF to create."]
    pub type_: IPLHRTFType,
    #[doc = " SOFA file from which to load HRTF data. Either \\c sofaFileName or \\c sofaData should be non-NULL.\nOnly for \\c IPL_HRTFTYPE_SOFA."]
    pub sofaFileName: *const ::std::os::raw::c_char,
    #[doc = " Pointer to a buffer containing SOFA file data from which to load HRTF data. Either \\c sofaFileName\nor \\c sofaData should be non-NULL. Only for \\c IPL_HRTFTYPE_SOFA."]
    pub sofaData: *const IPLuint8,
    #[doc = " Size (in bytes) of the buffer pointed to by \\c sofaData. Only for \\c IPL_HRTFTYPE_SOFA."]
    pub sofaDataSize: ::std::os::raw::c_int,
    #[doc = " Volume correction factor to apply to the loaded HRTF data. A value of 1.0 means the HRTF data will be used\nwithout any change."]
    pub volume: f32,
    #[doc = " Normalization setting. No normalization will be applied when choosing \\c IPL_HRTFNORMTYPE_NONE."]
    pub normType: IPLHRTFNormType,
}
extern "C" {
    #[doc = " Creates an HRTF.\n\nCalling this function is somewhat expensive; avoid creating HRTF objects in your audio thread at all\nif possible.\n\nThis function is not thread-safe. Do not simultaneously call it from multiple threads.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  hrtfSettings    The settings used to create the HRTF object.\n\\param  hrtf            [out] The created HRTF object.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplHRTFCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        hrtfSettings: *mut IPLHRTFSettings,
        hrtf: *mut IPLHRTF,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an HRTF object.\n\n\\param  hrtf    The HRTF object to retain a reference to.\n\n\\return The additional reference to the HRTF object."]
    pub fn iplHRTFRetain(hrtf: IPLHRTF) -> IPLHRTF;
}
extern "C" {
    #[doc = " Releases a reference to an HRTF object.\n\n\\param  hrtf    The HRTF object to release a reference to."]
    pub fn iplHRTFRelease(hrtf: *mut IPLHRTF);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLPanningEffect_t {
    _unused: [u8; 0],
}
#[doc = " Pans a single-channel point source to a multi-channel speaker layout based on the 3D position of the source\nrelative to the listener."]
pub type IPLPanningEffect = *mut _IPLPanningEffect_t;
#[doc = " Settings used to create a panning effect."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLPanningEffectSettings {
    #[doc = " The speaker layout to pan input audio to."]
    pub speakerLayout: IPLSpeakerLayout,
}
#[doc = " Parameters for applying a panning effect to an audio buffer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLPanningEffectParams {
    #[doc = " Unit vector pointing from the listener towards the source."]
    pub direction: IPLVector3,
}
extern "C" {
    #[doc = " Creates a panning effect.\n\n\\param  context         The context used to initialize Steam Audio.\n\\param  audioSettings   Global audio processing settings.\n\\param  effectSettings  The settings to use when creating the panning effect.\n\\param  effect          [out] The created panning effect.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplPanningEffectCreate(
        context: IPLContext,
        audioSettings: *mut IPLAudioSettings,
        effectSettings: *mut IPLPanningEffectSettings,
        effect: *mut IPLPanningEffect,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a panning effect.\n\n\\param  effect  The panning effect to retain a reference to.\n\n\\return The additional reference to the panning effect."]
    pub fn iplPanningEffectRetain(effect: IPLPanningEffect) -> IPLPanningEffect;
}
extern "C" {
    #[doc = " Releases a reference to a panning effect.\n\n\\param  effect  The panning effect to release a reference to."]
    pub fn iplPanningEffectRelease(effect: *mut IPLPanningEffect);
}
extern "C" {
    #[doc = " Resets the internal processing state of a panning effect.\n\n\\param  effect  The panning effect to reset."]
    pub fn iplPanningEffectReset(effect: IPLPanningEffect);
}
extern "C" {
    #[doc = " Applies a panning effect to an audio buffer.\n\nThis effect CANNOT be applied in-place.\n\n\\param  effect  The panning effect to apply.\n\\param  params  Parameters for applying the effect.\n\\param  in      The input audio buffer. Must be 1-channel.\n\\param  out     The output audio buffer. Must have as many channels as needed for the speaker layout\nspecified when creating the panning effect. For example, if the speaker layout is\n\\c IPL_SPEAKERLAYOUTTYPE_SURROUND_5_1, the output buffer must contain 6 channels.\n\n\\return \\c IPL_AUDIOEFFECTSTATE_TAILCOMPLETE to indicate that this effect does not generate any tail samples."]
    pub fn iplPanningEffectApply(
        effect: IPLPanningEffect,
        params: *mut IPLPanningEffectParams,
        in_: *mut IPLAudioBuffer,
        out: *mut IPLAudioBuffer,
    ) -> IPLAudioEffectState;
}
extern "C" {
    #[doc = " Returns the number of tail samples remaining in a panning effect's internal buffers.\n\nTail samples are audio samples that should be played even after the input to the effect has stopped\nplaying and no further input samples are available.\n\n\\param  effect  The panning effect.\n\n\\return The number of tail samples remaining."]
    pub fn iplPanningEffectGetTailSize(effect: IPLPanningEffect) -> IPLint32;
}
